fixing nav ul gap for mobile size

--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ footer {
 
 @media only screen and (max-width: 600px) {
     ul {
-        gap: 0.5rem;
+        gap: 0.2rem;
     }
     .nav-links {
         color: cadetblue;
